--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,4 @@
 .container {
-  min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
@@ -33,9 +32,15 @@
   text-align: center;
 }
 
+/* display of the badge */
+.splineviewer {
+  height: 85vh;
+  width: 100vw;
+}
+
 
 .description {
-  line-height: 1.5;
+  /* line-height: 1.5; */
   font-size: 1.5rem;
 }
 
