core ui, design system, tailwind, stiches, and more

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -36,9 +36,8 @@
 .splineviewer {
   height: 87vh;
   width: 100vw;
-  background: linear-gradient(180deg, #A5C9FB 0%, rgba(165, 201, 251, 0) 100%);
+  background: linear-gradient(180deg, #a5c9fb 0%, rgba(165, 201, 251, 0) 100%);
 }
-
 
 .description {
   /* line-height: 1.5; */
